kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securelogin-namespace
  labels:
    name: securelogin-namespace
