kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securelogin-app
  namespace: securelogin-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: securelogin-app
  template:
    metadata:
      labels:
        app: securelogin-app
    spec:
      containers:
        - name: securelogin-app
          image: bojkikeva/securelogin-app:latest
          ports:
            - containerPort: 8088
