kubernetes/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: securelogin-namespace
spec:
  selector:
    app: postgres-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
