kubernetes/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securelogin-namespace

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: securelogin-deployment
  namespace: securelogin-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: securelogin-app
  template:
    metadata:
      labels:
        app: securelogin-app
    spec:
      containers:
        - name: securelogin-app
          image: bojkikeva/securelogin-app:latest
          ports:
            - containerPort: 8088
---

apiVersion: v1
kind: Service
metadata:
  name: securelogin-service
  namespace: securelogin-namespace
spec:
  selector:
    app: securelogin-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: securelogin-ingress
  namespace: securelogin-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: securelogin-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: securelogin-app-service
                port:
                  number: 80
