kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: securelogin-ingress
  namespace: securelogin-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: securelogin-service
                port:
                  number: 8088
    - host: securelogin-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: securelogin-service
                port:
                  number: 8088
